--- a/styles.css
+++ b/styles.css
@@ -115,11 +115,12 @@ nav ul li a:hover {
     text-align: center;
     font-size: 18px;
     cursor: pointer;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, background-color 0.5s ease; 
 }
 
 .movie-item:hover {
     transform: scale(1.05);
+    background-color: #98190b;
 }
 
 .movie-item img {
@@ -325,6 +326,9 @@ section > h2{
     min-width: 250px;
     margin: 10px;
 }
+.footer-section .about p{
+    text-align: start;
+}
 
 .footer-section h2, .footer-section h3 {
     font-size: 1.5em;
@@ -347,13 +351,39 @@ section > h2{
 
 .footer-section ul li a {
     color: #fff;
+    font-size: medium;
     text-decoration: none;
     transition: color 0.3s;
+    transition: font-size 0.3;
     /* transition: translateX(50px); */
 }
 
 .footer-section ul li a:hover {
     color: #e74c3c;
+    font-size: large;
+   
+}
+
+.footer_list{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.footer_list li > img{
+    cursor: pointer;
+    border:1px ;
+    border-radius: 50%;
+    
+    
+}
+.footer_list li > img:hover{
+    cursor: pointer;
+    border:1px ;
+    border-radius: 50%;
+    transform: translateY(5px);
+  
+  
+    
 }
 
 .svg{
