--- a/styles.css
+++ b/styles.css
@@ -100,14 +100,14 @@ nav ul li a:hover {
 }
 
 .movie-item {
-    background-color: #333333d2;
-    min-height: 400px;
-   
+    padding: 10px;
     text-align: center;
     font-size: 18px;
     cursor: pointer;
-    transition: transform 0.3s ease;
-
+    background: linear-gradient(to top, #000000 0%, #514f4f 100%);
+    background-size: 100% 200%;
+    background-position: bottom;
+    transition: transform 0.3s ease, background-position 0.5s ease;
 }
 .movie-item_2 {
    
@@ -115,14 +115,13 @@ nav ul li a:hover {
     text-align: center;
     font-size: 18px;
     cursor: pointer;
-    transition: transform 0.3s ease, background-color 0.5s ease; 
+    transition: transform 0.3s ease;
 }
 
 .movie-item:hover {
     transform: scale(1.05);
-    background-color: #98190b;
+    background-position: top;
 }
-
 .movie-item img {
     width: 100%;
     height: 400px;
